2005-09-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Add GLib::MetaInterface#install_property, #property,
	#properties.
	* src/rbgobject.c: Doesn't wrap the set_foo functions 
	for construct only properties by Sven Herzberg [Bug #1192975]

2005-09-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Supports Ruby-GetText-Package.
	You can use GetText methods unless "require 'gettext'".
	And it works in English if the users don't have Ruby-GetText-Package.
	* src/rbgobject.c: Keep the ruby object when the GObject is removed by C side. 
	Tomasz Wegrzanowski.

2005-09-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Show Warning messages unless -d option.
	Pointed out by Guillaume Cottenceau.

2005-09-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c (rbgobj_instance_from_ruby_object): Fixed the error messages
	"TypeError: fundamental type glong isn't supported" to 
	"TypeError:Fixnum isn't supported". Pointed out by Guillaume Cottenceau.

2005-09-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_boxed.c (rbgobj_make_boxed): Return nil if boxed
	object is NULL.

2005608-21  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbglib_utils.c: Added GLib.listenv and .host_name (2.8)

2005-07-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version.
	* sample/type-register.rb: Fix a bug.

2005-07-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/pkg-config.rb: Added PKGConfig.name, .description,
	 .provides, .requires.

2005-07-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c, rbglib_maincontext.c: Works on Win32 again.

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/pkg-config.rb: Added PKGConfig.list_all.

2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/rbglib_maincontext.c, rbglib_iochannel.c: 
	Fix to work on ruby-1.6.8, GTK+-2.0.6. 
	* src/rbglib_iochannel.c, rbgobj_object.c: Fix a compiling warning. 

2005-07-15  Masao Mutoh  <mutoh@highway.ne.jp>
