@@ -1,3 +1,7 @@
+2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib.c: Added GLib::BUILD_VERSION.
+
 2005-09-18  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgobj_type.c: Add GLib::MetaInterface#install_property, #property,
